2000/05/18	***** v1.0.0 shipped *****

2000/05/18	fadden
	- updated version information to indicate final release

2000/03/25	***** v0.6.1 shipped *****

2000/03/25	fadden
	- Sheppy says Mac OS X PPC v1.02 and v1.2 work with minor SysDefs tweak

2000/03/05	***** v0.6.0 (beta) shipped *****

2000/03/05	fadden
	- modified NuOpenRW to call mktemp or mkstemp if tmpPath looks like
	  a template
	- removed DEBUG_MSGS from default CFLAGS
	- updated version information to indicate beta release

2000/02/24	***** v0.5.1 shipped *****

2000/02/20	changes from Scott Blackman
	- portability fixes for DJGPP under Win95

2000/02/17	changes from Devin Reade
	- portability fixes for BSD, AIX, and others

2000/02/09	***** v0.5.0 (alpha) shipped *****

2000/02/08	fadden
	- tweaked the BeOS/PPC config around a little
	- deleted some commas to make "gcc -pendantic" happy

2000/02/06	fadden
	- include @CFLAGS@ in case somebody wants to override them

2000/02/06	***** v0.4.0b shipped *****

2000/02/06	fadden
	- added "install-shared" make target
	- portability fixes for HP/UX
	- configure.in test for presence of snprintf/vsnprintf declarations

2000/02/06	***** v0.4.0a shipped *****

2000/02/06	fadden
	- massaged configure.in for BeOS, and added some type casts for mwerks

2000/02/06	***** v0.4.0 shipped *****

2000/02/06	fadden
	- added value range checking to Nu_SetValue

2000/02/05	fadden
	- finished "test-basic"
	- added an "install" target to copy libnufx and NufxLib.h
	- added "mkinstalldirs"
	- fixed a memory leak in NuTest
	- made several implicit typecasts explicit for Visual C++'s benefit
	- renamed MiscStuff's replacement function to "Nu_function"
	- use "rb" or "wb" as fopen arg in sample code for Win32

2000/02/04	fadden
	- wrote a fair piece of "test-basic"
	- added "stickyErr" to "toBuffer" data sink so we can catch overruns

2000/02/02	fadden
	- minor changes to get it working under Win32 (Visual C++ 6.0)
	- added --enable-dmalloc to configuration